schemars/tests/ui/invalid_validation_attrs.stderr
error: expected validate regex attribute item to be of the form `regex(...)`
 --> tests/ui/invalid_validation_attrs.rs:7:31
  |
7 | pub struct Struct1(#[validate(regex, foo, length(min = 1, equal = 2, bar))] String);
  |                               ^^^^^

error: expected schemars regex attribute item to be of the form `regex(...)`
  --> tests/ui/invalid_validation_attrs.rs:11:31
   |
11 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
   |                               ^^^^^

error: schemars attribute cannot contain both `equal` and `min`
  --> tests/ui/invalid_validation_attrs.rs:11:59
   |
11 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
   |                                                           ^^^^^^^^^

error: unknown item in schemars length attribute: `bar`
  --> tests/ui/invalid_validation_attrs.rs:11:70
   |
11 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
   |                                                                      ^^^

error: unknown schemars attribute `foo`
  --> tests/ui/invalid_validation_attrs.rs:11:38
   |
11 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
   |                                      ^^^

error: unknown schemars attribute `email`
  --> tests/ui/invalid_validation_attrs.rs:10:12
   |
10 | #[schemars(email)]
   |            ^^^^^

error: expected validate regex attribute item to be of the form `regex(...)`
  --> tests/ui/invalid_validation_attrs.rs:16:9
   |
16 |         regex = "foo",
   |         ^^^^^^^^^^^^^

error: expected validate contains attribute item to be of the form `contains(...)`
  --> tests/ui/invalid_validation_attrs.rs:17:9
   |
17 |         contains = "bar",
   |         ^^^^^^^^^^^^^^^^

error: expected schemars regex attribute item to be of the form `regex(...)`
  --> tests/ui/invalid_validation_attrs.rs:29:9
   |
29 |         regex = "foo",
   |         ^^^^^^^^^^^^^

error: expected schemars contains attribute item to be of the form `contains(...)`
  --> tests/ui/invalid_validation_attrs.rs:30:9
   |
30 |         contains = "bar",
   |         ^^^^^^^^^^^^^^^^

error: schemars attribute cannot contain both `url` and `email`
  --> tests/ui/invalid_validation_attrs.rs:34:9
   |
34 |         url
   |         ^^^

error: unknown schemars attribute `phone`
  --> tests/ui/invalid_validation_attrs.rs:32:9
   |
32 |         phone,
   |         ^^^^^
